# supershader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
libs/argparse/: CMakeLists.txt
libs/glslang/: DartConfiguration.tcl
src/: CMakeLists.txt  args.cc  glslang.cc  input.cc  json.cc  main.cc  sbs-file.cc  spirvcross.cc  supershader.h
